add header styles

--- a/ui/whoisplaingWeb/src/app/shared/components/header/header.component.html
+++ b/ui/whoisplaingWeb/src/app/shared/components/header/header.component.html
@@ -1,3 +1,14 @@
-<p>
-  header works!
-</p>
+<header class="header ">
+  <ul class="top-menu container">
+    <li class="menu-item logo">
+     Quien Juega
+    </li>
+    <li class="menu-item font-lg">
+      <a class="">Eventos</a>
+    </li>
+    <li class="menu-item font-lg">
+      <a>Nuevo evento</a>
+    </li>
+  </ul>
+</header>
+
