--- a/ui/whoisplaingWeb/src/styles.scss
+++ b/ui/whoisplaingWeb/src/styles.scss
@@ -1,1 +1,10 @@
 /* You can add global styles to this file, and also import other style files */
+@import url('https://fonts.googleapis.com/css?family=Roboto+Slab');
+@import 'app/shared/scss/minireset.scss';
+@import 'app/shared/scss/colors.scss';
+
+
+body {
+    font-family: 'Roboto Slab', serif;
+    background-image: url("./app/shared/fonts/futbol-sala.jpg");
+}
