List events view

--- a/ui/whoisplaingWeb/src/app/shared/components/event-list/event-list.component.html
+++ b/ui/whoisplaingWeb/src/app/shared/components/event-list/event-list.component.html
@@ -1,3 +1,5 @@
-<p>
-  event-list works!
-</p>
+<div class="scroll">
+    <div *ngFor="let event of eventList"> 
+        <app-event [event]="event"></app-event>
+      </div>
+</div>
