--- a/ui/whoisplaingWeb/src/app/shared/scss/colors.scss
+++ b/ui/whoisplaingWeb/src/app/shared/scss/colors.scss
@@ -3,3 +3,6 @@ $orange: #FFA400;
 $british-racing-green: #034732;
 $spanish-virdian: #008148;
 $acid-green: #c6c013;
+$line-color: #9b9b9d;
+$hover-color:#EBEEF7;
+$title-grey: #797a7c;
