--- a/ui/whoisplaingWeb/src/app/shared/components/event/event.component.html
+++ b/ui/whoisplaingWeb/src/app/shared/components/event/event.component.html
@@ -1,3 +1,8 @@
-<p>
-  event works!
-</p>
+
+<div class="card">
+    <span>
+      <i class="fa far fa-calendar-alt" title="Expand"></i>
+      {{event.name}}
+    </span>
+    <span>{{event.date | date:'medium'}}</span>
+</div>
