--- a/ui/whoisplaingWeb/src/app/shared/components/header/header.component.html
+++ b/ui/whoisplaingWeb/src/app/shared/components/header/header.component.html
@@ -1,14 +1,19 @@
-<header class="header ">
-  <ul class="top-menu container">
-    <li class="menu-item logo">
-     Quien Juega
-    </li>
-    <li class="menu-item font-lg">
-      <a class="">Eventos</a>
-    </li>
-    <li class="menu-item font-lg">
-      <a>Nuevo evento</a>
-    </li>
-  </ul>
+<header class="header">
+  <div class="container">
+  <div class="left-side-menu">
+      <div class="logo">
+      </div>
+  </div>
+  <div class="right-side-menu">
+    <ul class="top-menu">
+        <li class="menu-item font-lg">
+          <a class="">Eventos</a>
+        </li>
+        <li class="menu-item font-lg">
+          <a>Nuevo evento</a>
+        </li>
+      </ul>
+      <app-hamburger class="hamburger"></app-hamburger>
+  </div>
+  </div>
 </header>
-
