--- a/ui/whoisplaingWeb/src/app/shared/components/header/header.component.scss
+++ b/ui/whoisplaingWeb/src/app/shared/components/header/header.component.scss
@@ -5,11 +5,25 @@
 .header {
     position: fixed;
     width: 100vw;
-    background-color: rgba($color: $yale-blue, $alpha: .7);
-    
+    background-color: rgba($color: $yale-blue, $alpha: .7);   
+}
+.container {
+    display: flex;
+}
+.left-side-menu {
+    flex: 1;
+    display: flex;
+    align-items: center;
+}
+.right-side-menu {
+    flex: 1;
 }
 .logo {
-    margin-right: auto;
+    width: 29%;
+    height: 2rem;
+    background-image: url('../../fonts/icono.svg');
+    background-repeat: no-repeat;
+    background-size: contain;
 }
 
 .top-menu {
@@ -30,4 +44,27 @@
 .active {
     font-weight: 600;
     color: $acid-green;
+}
+.hamburger {
+    display: none;
+}
+//responsive
+
+@media screen and (max-width: 980px) {
+    .hamburger { 
+        display: block;
+    }
+    .top-menu {
+        display: none;
+    }
+    .header {
+        background-color: transparent;  
+        padding: 1.5rem; 
+    }
+    .logo {
+        width: 30rem;
+    }
+    .container {
+        margin: 0;
+    }
 }
