Event details view

--- a/ui/whoisplaingWeb/src/app/shared/components/event-details/event-details.component.scss
+++ b/ui/whoisplaingWeb/src/app/shared/components/event-details/event-details.component.scss
@@ -1,6 +1,7 @@
+@import '../../scss/cards';
 @import '../../scss/main.scss';
 @import '../../scss/sizes.scss';
 
-.scroll {
-    overflow: auto;    
+.width {
+    width: 50%;
 }
