--- a/ui/whoisplaingWeb/src/app/shared/components/event-list/event-list.component.html
+++ b/ui/whoisplaingWeb/src/app/shared/components/event-list/event-list.component.html
@@ -1,5 +1,5 @@
-<div class="scroll">
+<div class="scroll container">
     <div *ngFor="let event of eventList"> 
-        <app-event [event]="event"></app-event>
+        <app-event [event]="event" (click)="viewEventDetails(event)"></app-event>
       </div>
 </div>
