--- a/ui/whoisplaingWeb/src/app/shared/components/event-list/event-list.component.html
+++ b/ui/whoisplaingWeb/src/app/shared/components/event-list/event-list.component.html
@@ -1,6 +1,11 @@
+<section>
+    <h1 class="title">
+        Events
+    </h1>
+</section>
 <div class="scroll">
     <div *ngFor="let event of eventList"> 
         <app-event [event]="event"></app-event>
-      </div>
+    </div>
 </div>
 
