--- a/ui/whoisplaingWeb/src/app/shared/components/event/event.component.html
+++ b/ui/whoisplaingWeb/src/app/shared/components/event/event.component.html
@@ -4,5 +4,7 @@
       <i class="fa far fa-calendar-alt" title="Expand"></i>
       {{event.name}}
     </span>
-    <span>{{event.date | date:'medium'}}</span>
+    <span class="date">
+      {{event.date | date:'medium'}}
+    </span>
 </div>
