--- a/ui/whoisplaingWeb/src/app/shared/scss/cards.scss
+++ b/ui/whoisplaingWeb/src/app/shared/scss/cards.scss
@@ -3,12 +3,15 @@
 .card {
     display: flex;
     align-items: center;
-    font-family: sans-serif;
+    background-color: rgba($spanish-virdian, .6);
+    -webkit-box-shadow: -1px 8px 23px 0px rgba(0,0,0,0.75);
+    -moz-box-shadow: -1px 8px 23px 0px rgba(0,0,0,0.75);
+    box-shadow: -1px 8px 23px 0px rgba(0,0,0,0.75);
     color: $orange;
     border: 1px solid $line-color;
-    height: 80px;
-    width: 95%;
+    border-radius: 5px;
     margin: 20px;
+    padding: 3rem;
 
     &:hover {
         cursor: pointer;        
