--- a/ui/whoisplaingWeb/src/app/shared/components/event-list/event-list.component.scss
+++ b/ui/whoisplaingWeb/src/app/shared/components/event-list/event-list.component.scss
@@ -6,7 +6,13 @@
     padding: 0 20rem;   
 }
 .title {
-    font-size: 7rem;
     margin: 0 22rem;
     margin-top: 2rem;
+}
+
+.event-element {
+    
+    &:hover {
+        background-color: $british-racing-green;
+    }
 }
