--- a/ui/whoisplaingWeb/src/app/shared/components/event/event.component.html
+++ b/ui/whoisplaingWeb/src/app/shared/components/event/event.component.html
@@ -2,9 +2,9 @@
 <div class="card">
     <span>
       <i class="fa far fa-calendar-alt" title="Expand"></i>
-      {{event.name}}
+      {{event.Location}}
     </span>
     <span class="date">
-      {{event.date | date:'medium'}}
+      {{event.EventDateAndTime | date:'medium'}}
     </span>
 </div>
