--- a/ui/whoisplaingWeb/src/app/shared/components/header/header.component.html
+++ b/ui/whoisplaingWeb/src/app/shared/components/header/header.component.html
@@ -6,7 +6,7 @@
   </div>
   <div class="right-side-menu">
     <ul class="top-menu">
-        <li class="menu-item font-lg">
+        <li class="menu-item font-lg" routerLink="/events">
           <a class="">Eventos</a>
         </li>
         <li class="menu-item font-lg">
