--- a/ui/whoisplaingWeb/src/app/shared/components/confirm/confirm.component.html
+++ b/ui/whoisplaingWeb/src/app/shared/components/confirm/confirm.component.html
@@ -1,6 +1,8 @@
 <p>Lugar: {{eventDetail?.Location}}</p>
 
 <p>Fecha: {{eventDetail?.EventDateAndTime}}</p>
+<div class="buttons">
+  <input type="button" value= "Confirmar" class="button">
+  <input type="button" value="Cancelar" class="button">
+</div>
 
-<button>Confirmar</button>
-<button>Cancelar</button>
