--- a/ui/whoisplaingWeb/src/app/shared/components/header/header.component.html
+++ b/ui/whoisplaingWeb/src/app/shared/components/header/header.component.html
@@ -10,7 +10,7 @@
           <a class="">Eventos</a>
         </li>
         <li class="menu-item font-lg">
-          <a>Nuevo evento</a>
+          <a (click)="newEvent()">Nuevo evento</a>
         </li>
       </ul>
       <app-hamburger class="hamburger"></app-hamburger>
