--- a/ui/whoisplaingWeb/src/app/shared/components/event-details/event-details.component.scss
+++ b/ui/whoisplaingWeb/src/app/shared/components/event-details/event-details.component.scss
@@ -5,3 +5,16 @@
 .width {
     width: 50%;
 }
+.title {
+    margin: 0 22rem;
+    margin-top: 2rem;
+}
+.scroll {
+    overflow: auto; 
+    padding: 0 20rem; 
+    padding-bottom: 1rem;     
+}
+
+.card {
+    padding: 1rem 0;
+}
