--- a/ui/whoisplaingWeb/src/app/shared/scss/cards.scss
+++ b/ui/whoisplaingWeb/src/app/shared/scss/cards.scss
@@ -8,13 +8,17 @@
     -moz-box-shadow: -1px 8px 23px 0px rgba(0,0,0,0.75);
     box-shadow: -1px 8px 23px 0px rgba(0,0,0,0.75);
     color: $orange;
+    min-width: 20rem;
     border: 1px solid $line-color;
     border-radius: 5px;
-    margin: 20px;
+    margin-bottom: 20px;
     padding: 3rem;
+    transition: all .2s ease-in-out;
 
     &:hover {
-        cursor: pointer;        
+        cursor: pointer; 
+        background-color: $british-racing-green;
+        transform: scale(1.01);        
     }
 }
 
