--- a/ui/whoisplaingWeb/src/styles.scss
+++ b/ui/whoisplaingWeb/src/styles.scss
@@ -7,4 +7,5 @@
 body {
     font-family: 'Roboto Slab', serif;
     background-image: url("./app/shared/fonts/futbol-sala.jpg");
+    background-attachment: fixed;
 }
