--- a/ui/whoisplaingWeb/src/app/shared/components/header/header.component.scss
+++ b/ui/whoisplaingWeb/src/app/shared/components/header/header.component.scss
@@ -3,7 +3,8 @@
 @import '../../scss/sizes.scss';
 
 .header {
-    // position: fixed;
+    position: fixed;
+    top: 0;
     width: 100vw;
     background-color: rgba($color: $yale-blue, $alpha: .7);   
 }
