--- a/ui/whoisplaingWeb/src/app/shared/components/confirm/confirm.component.html
+++ b/ui/whoisplaingWeb/src/app/shared/components/confirm/confirm.component.html
@@ -2,7 +2,7 @@
 
 <p>Fecha: {{eventDetail?.EventDateAndTime}}</p>
 <div class="buttons">
-  <input type="button" value= "Confirmar" class="button">
-  <input type="button" value="Cancelar" class="button">
+  <input type="button" value= "Confirmar" class="button" (click)="confirm()">
+  <input type="button" value="Cancelar" class="button" (click)="cancel()">
 </div>
 
