--- a/ui/whoisplaingWeb/src/app/shared/components/event-new/event-new.component.html
+++ b/ui/whoisplaingWeb/src/app/shared/components/event-new/event-new.component.html
@@ -3,19 +3,19 @@
       <div class="card">
       <div >
           <label class="gap" for="nombre">Nombre</label>
-          <input type="text" id="nombre" class="gap" />
+          <input type="text" [(ngModel)]="nombre" id="nombre" class="gap" />
         </div>   
         <div >
           <label class="gap" for="email">Email</label>
-          <input type="text" id="email" class="gap" />
+          <input type="text" [(ngModel)]="email" id="email" class="gap" />
         </div>   
         <div >
           <label class="gap" for="location">Location</label>
-          <input type="text" id="location" class="gap" />
+          <input type="text" [(ngModel)]="location" id="location" class="gap" />
         </div>  
         <div >
             <label class="gap" for="fecha">Fecha</label>
-            <input type="date" id="decha" class="gap" />
+            <input type="date" [(ngModel)]="fecha" id="fecha" class="gap" />
           </div>          
       </div>  
       
