--- a/ui/whoisplaingWeb/src/app/shared/components/hamburger/hamburger.component.html
+++ b/ui/whoisplaingWeb/src/app/shared/components/hamburger/hamburger.component.html
@@ -19,7 +19,7 @@
     but hey, it's pure CSS magic.
     -->
     <ul id="menu">
-      <a><li class="menu-item">Eventos</li></a>
-      <a><li class="menu-item">Nuevo Evento</li></a>
+      <a><li class="menu-item" routerLink="/events">Eventos</li></a>
+      <a><li class="menu-item" (click)="newEvent()">Nuevo Evento</li></a>
     </ul>
   </div>
