--- a/ui/whoisplaingWeb/src/app/shared/components/event-details/event-details.component.scss
+++ b/ui/whoisplaingWeb/src/app/shared/components/event-details/event-details.component.scss
@@ -6,15 +6,30 @@
     width: 50%;
 }
 .title {
-    margin: 0 22rem;
-    margin-top: 2rem;
+    margin: 2rem 0;
 }
 .scroll {
     overflow: auto; 
-    padding: 0 20rem; 
+    padding: 1rem;
     padding-bottom: 1rem;     
+}
+.playing {
+    margin-left: auto;
 }
 
 .card {
     padding: 1rem 0;
+}
+@media screen and (max-width:1150px) {
+    .title {
+        margin: 7rem 0; 
+        margin-bottom: 3rem;
+    }
+}
+
+@media screen and (max-width:768px) {
+    .title {
+        margin-top: 10rem 0;
+        margin-bottom: 5rem; 
+    }
 }
