--- a/ui/whoisplaingWeb/src/app/shared/components/event-new/event-new.component.html
+++ b/ui/whoisplaingWeb/src/app/shared/components/event-new/event-new.component.html
@@ -1,6 +1,6 @@
 <div class="scroll">
   <div> 
-      <div class="card">
+      <div class="menu">
       <div >
           <label class="gap" for="nombre">Nombre</label>
           <input type="text" [(ngModel)]="nombre" id="nombre" class="gap" />
@@ -27,8 +27,8 @@
       </div>
       
       <div class="width user"> 
-        <div class="card ">
-          <button (click)="addEvent()">Guardar</button>
+        <div class="buttons">
+          <button (click)="addEvent()" class="button">Guardar</button>
         </div>
       </div>
   </div>
